--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
               </div>
               <div class="form-group">
                 <!-- <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5" onclick="send(event)"> -->
-				<button type="submit" value="Send Message" class="btn btn-primary py-3 px-5" onsubmit="sendEmail">click</button>
+				<button type="submit" value="Send Message" class="btn btn-primary py-3 px-5" onsubmit="sendEmail" id="btn">SEND</button>
               </div>
             </form>
           
@@ -900,37 +900,28 @@
   </script>
   <script src="https://smtpjs.com/v3/smtp.js">
 </script>
-<script>
-	const form  =  document.querySelector(".contact-form");
-	form.addEventListener("submit", e =>{
-		e.preventDefault();
-		let name = document.querySelector(".name").value;
-		let email = document.querySelector(".email").value;
-		let subject = document.querySelector(".subject").value;
-		let message = document.querySelector(".message").value;
 
-document.querySelector(".contact-form").reset();
-sendEmail(name, email, subject, message);
-
-	})
-	function sendEmail(name, email, subject, message){
-		Email.send({
-			Host : "smtp.elasticemail.com",
+    <script>
+		var btn = document.getElementById('btn');
+		btn.addEventListener('click',function(e){
+			e.preventDefault()
+			var name = document.getElementById('name').value;
+			var email = document.getElementById('email').value;
+			var subject = document.getElementById('subject').value;
+			var message = document.getElementById('message').value;
+			var body = 'name: ' +name + '<br/> email: ' + email + '<br/> subject: ' + subject + '<br/> message: s' + message;
+			Email.send({
+    Host : "smtp.elasticemail.com",
     Username : "balachara26@gmail.com",
     Password : "625FB81C52B4205D5C2579E06AB54DBF3C54",
     To : 'balachara26@gmail.com',
-    From : document.getElementById('email').value,
-    Subject : `${name} just messaged you from the website form>`,
-    Body : `Name: ${name}<br> Email:${email}<br> Subject:${subject} <br >Message:${message}`,
-
-		}).then((success)=>{
-			alert("message sent successfully");
-		}).catch((error)=>{
-			alert("error sending message");
+    From : email,
+    Subject : subject,
+    Body : body
+}).then(
+  message => alert(message)
+);
 		})
-	}
-</script>
-
-    
+	</script>
   </body>
 </html>
