--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/web-design.jpg');">
+              <a href="#" class="block-20" style="background-image: url('images/web-design.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
                 <h3 class="heading"><a href="single.html">Common designs used in all kind of websites</a></h3>
@@ -665,7 +665,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/ecommerce.jpg');">
+              <a href="#" class="block-20" style="background-image: url('images/ecommerce.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
                 <h3 class="heading"><a href="single.html">Why we generate dynamic link for the E-Commerce website</a></h3>
@@ -680,7 +680,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/seo.jpg');">
+              <a href="#" class="block-20" style="background-image: url('images/seo.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
                 <h3 class="heading"><a href="single.html">Most important tax that we used in SEO</a></h3>
