--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
               <a href="#" class="block-20" style="background-image: url('images/web-design.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="single.html">Common designs used in all kind of websites</a></h3>
+                <h3 class="heading"><a href="#">Common designs used in all kind of websites</a></h3>
                 <div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
 	                	<a href="#" class="mr-2">Admin</a>
@@ -668,7 +668,7 @@
               <a href="#" class="block-20" style="background-image: url('images/ecommerce.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="single.html">Why we generate dynamic link for the E-Commerce website</a></h3>
+                <h3 class="heading"><a href="#">Why we generate dynamic link for the E-Commerce website</a></h3>
                 <div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
 	                	<a href="#" class="mr-2">Admin</a>
@@ -683,7 +683,7 @@
               <a href="#" class="block-20" style="background-image: url('images/seo.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="single.html">Most important tax that we used in SEO</a></h3>
+                <h3 class="heading"><a href="#">Most important tax that we used in SEO</a></h3>
                 <div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
 	                	<a href="#" class="mr-2">Admin</a>
