--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span>B</span>alaji</a>
+	      <a class="navbar-brand" href=""><span>B</span>alaji</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -47,7 +47,7 @@
 	  </nav>
 	  <section class="hero-wrap js-fullheight">
       <div class="overlay"></div>
-      <div class="container">
+      <div class="container top">
         <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
@@ -452,15 +452,15 @@
 
     <section class="ftco-section" id="services-section">
     	<div class="container-fluid px-md-5">
-    		<div class="row justify-content-center py-5 mt-5">
+    		<div class="row justify-content-center py-5 mt-5 ">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Services</h1>
             <h2 class="mb-4">Services</h2>
           </div>
         </div>
     		<div class="row">
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+					<div class="col-md-4 text-center d-flex ftco-animate top">
+						<a  class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-analysis"></i>
 							</span>
@@ -470,8 +470,8 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+					<div class="col-md-4 text-center d-flex ftco-animate top">
+						<a class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-innovation"></i>
 							</span>
@@ -481,8 +481,8 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+					<div class="col-md-4 text-center d-flex ftco-animate top">
+						<a  class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-ideas"></i>
 							</span>
@@ -493,8 +493,8 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+					<div class="col-md-4 text-center d-flex ftco-animate top">
+						<a class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-flasks"></i>
 							</span>
@@ -504,8 +504,8 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+					<div class="col-md-4 text-center d-flex ftco-animate top">
+						<a  class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-ux-design"></i>
 							</span>
@@ -515,8 +515,8 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+					<div class="col-md-4 text-center d-flex ftco-animate top">
+						<a  class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-idea"></i>
 							</span>
@@ -539,11 +539,11 @@
             <h2 class="mb-4">My Projects</h2>
           </div>
         </div>
-    		<div class="row no-gutters">
+    		<div class="row no-gutters ">
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/newroot.jpeg);">
     					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
+	    				<div class="text text-center p-4 ">
 	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 	    					<span>Web Design</span>
 	    				</div>
@@ -641,7 +641,7 @@
 
     <section class="ftco-section" id="blog-section">
       <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
+        <div class="row justify-content-center mb-5 pb-5 top">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Blog</h1>
             <h2 class="mb-4">Blog</h2>
@@ -649,11 +649,11 @@
         </div>
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="#" class="block-20" style="background-image: url('images/web-design.jpg');">
+          	<div class="blog-entry justify-content-end top">
+              <a class="block-20" style="background-image: url('images/web-design.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="#">Common designs used in all kind of websites</a></h3>
+                <h3 class="heading"><a >Common designs used in all kind of websites</a></h3>
                 <div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
 	                	<a href="#" class="mr-2">Admin</a>
@@ -664,11 +664,11 @@
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="#" class="block-20" style="background-image: url('images/ecommerce.jpg');">
+          	<div class="blog-entry justify-content-end top">
+              <a class="block-20" style="background-image: url('images/ecommerce.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="#">Why we generate dynamic link for the E-Commerce website</a></h3>
+                <h3 class="heading"><a >Why we generate dynamic link for the E-Commerce website</a></h3>
                 <div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
 	                	<a href="#" class="mr-2">Admin</a>
@@ -679,15 +679,15 @@
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="#" class="block-20" style="background-image: url('images/seo.jpg');">
+          	<div class="blog-entry top">
+              <a  class="block-20" style="background-image: url('images/seo.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="#">Most important tax that we used in SEO</a></h3>
+                <h3 class="heading"><a >Most important tax that we used in SEO</a></h3>
                 <div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 2</a>
+	                	<a  class="mr-2">Admin</a>
+	                	<a  class="meta-chat"><span class="icon-chat"></span> 2</a>
 	                </p>
                 </div>
               </div>
@@ -714,7 +714,7 @@
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 heading-section text-center ftco-animate">
+          <div class="col-md-7 heading-section text-center ftco-animate middle">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
             <p>Are you intrsted to develop in your business platform ping me.</p>
@@ -762,7 +762,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="#">yoursite.com</a></p>
+		            <p><a href="https://balasara87.github.io/portfolio">My website</a></p>
 	            </div>
 	          </div>
           </div>
@@ -814,27 +814,27 @@
             </div>
           </div>
           <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-4">
+            <div class="ftco-footer-widget mb-4 ml-md-4 bottom">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                <li><a ><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+                <li><a ><span class="icon-long-arrow-right mr-2"></span>About</a></li>
+                <li><a ><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
+                <li><a ><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
+                <li><a ><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
+             <div class="ftco-footer-widget mb-4 bottom">
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Website Design</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>E-commerce Website</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>SEO analyst</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Website Maintanance</a></li>
-				<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Analyst</a></li>
+                <li><a><span class="icon-long-arrow-right mr-2"></span>Website Design</a></li>
+                <li><a><span class="icon-long-arrow-right mr-2"></span>E-commerce Website</a></li>
+                <li><a><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
+                <li><a><span class="icon-long-arrow-right mr-2"></span>SEO analyst</a></li>
+                <li><a ><span class="icon-long-arrow-right mr-2"></span>Website Maintanance</a></li>
+				<li><a><span class="icon-long-arrow-right mr-2"></span>Business Analyst</a></li>
 
               </ul>
             </div>
