contact form work

--- a/index.html
+++ b/index.html
@@ -762,35 +762,26 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="https://balasara87.github.io/portfolio">My website</a></p>
+		            <p><a href="https://balasara87.github.io/portfolio" target="_blank">My website</a></p>
 	            </div>
 	          </div>
           </div>
         </div>
 	
 
-        <div class="row no-gutters block-9 middle">
-          <div class="col-md-6 order-md-last d-flex">
-            <form action="mailto:balachara26@gmail.com" class="bg-light p-4 p-md-5 contact-form" method="post"  role="form" >
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name" id="name" name="name" required>
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Email" name="email" id="email">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject" name="subject" id="subject">
-              </div>
-              <div class="form-group">
-                <textarea  id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-              </div>
-              <div class="form-group">
-                <!-- <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5"> -->
-				<button type="submit" value="Send Message" class="btn btn-primary py-3 px-5"  id="btn">SEND MESSAGE</button>
-              </div>
-            </form>
-          
-          </div>
+        <div class="row no-gutters contact_sec block-9 ftco-about middle">
+          <div class="col-md-6 order-md-last heading-section">
+			<ul class="about-info mt-4  px-5">
+				<li class="d-flex py-2"><span>Name:</span> <span>Balaji s</span></li>
+				<li class="d-flex py-2"><span>Living:</span> <span>Coimbatore</span></li>
+				<li class="d-flex py-2"><span>Email:</span> <span>balachara26@gmail.com</span></li>
+				<li class="d-flex py-2"><span>Phone: </span> <span>8072107716</span></li>
+			</ul>
+			<p class="px-5">I have done 15+ project accross in india i proudly say's that i provided a Quality of service at low cost. </p>
+			<p class="px-5">Choose your dream platform to work. Choose what kind of platform you need. I will help you to complete the project with fulfill your's project.</p>
+
+              <p class="px-5"><a class="btn btn-primary py-3 px-5" href="mailto:balachara26@gmail.com" type="submit" id="send">SEND MESSAGE</a></p>
+        </div>
 
           <div class="col-md-6 d-flex">
           	<div class="img" style="background-image: url(images/balaji.jpg);"></div>
@@ -898,7 +889,9 @@
   })
 });
   </script>
- 
+
+
+
 
     
   </body>
