--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
 	
 
         <div class="row no-gutters contact_sec block-9 ftco-about middle">
-          <div class="col-md-6 order-md-last heading-section">
+          <div class="col-md-6 order-md-last heading-section bg-light">
 			<ul class="about-info mt-4  px-5">
 				<li class="d-flex py-2"><span>Name:</span> <span>Balaji s</span></li>
 				<li class="d-flex py-2"><span>Living:</span> <span>Coimbatore</span></li>
