--- a/index.html
+++ b/index.html
@@ -772,15 +772,15 @@
         <div class="row no-gutters contact_sec block-9 ftco-about middle">
           <div class="col-md-6 order-md-last heading-section bg-light">
 			<ul class="about-info mt-4  px-5">
-				<li class="d-flex py-2"><span>Name:</span> <span>Balaji s</span></li>
-				<li class="d-flex py-2"><span>Living:</span> <span>Coimbatore</span></li>
-				<li class="d-flex py-2"><span>Email:</span> <span>balachara26@gmail.com</span></li>
-				<li class="d-flex py-2"><span>Phone: </span> <span>8072107716</span></li>
+				<li class="d-flex py-1"><span>Name:</span> <span>Balaji s</span></li>
+				<li class="d-flex py-1"><span>Living:</span> <span>Coimbatore</span></li>
+				<li class="d-flex py-1"><span>Email:</span> <span>balachara26@gmail.com</span></li>
+				<li class="d-flex py-1"><span>Phone: </span> <span>8072107716</span></li>
 			</ul>
 			<p class="px-5">I have done 15+ project accross in india i proudly say's that i provided a Quality of service at low cost. </p>
 			<p class="px-5">Choose your dream platform to work. Choose what kind of platform you need. I will help you to complete the project with fulfill your's project.</p>
 
-              <p class="px-5"><a class="btn btn-primary py-3 px-5" href="mailto:balachara26@gmail.com" type="submit" id="send">SEND MESSAGE</a></p>
+              <p class="px-5 py-3"><a class="btn btn-primary py-3 px-5" href="mailto:balachara26@gmail.com" type="submit" id="send">SEND MESSAGE</a></p>
         </div>
 
           <div class="col-md-6 d-flex">
